--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,14 @@
-<div id="top-bar" class="h1 text-center py-3 row-cols-sm-auto sticky-top container-fluid">
-    <div class="container">
-        <div class="row">
-            <div>
-                <a href="https://chassis.ng"><img [src]="WebLogo.siteImage" [title]="WebLogo.logoTitle"></a>
-            </div>
-        </div>
+<div
+  id="top-bar"
+  class="h1 text-center py-3 row-cols-sm-auto sticky-top container-fluid"
+>
+  <div class="container">
+    <div class="row">
+      <div>
+        <a routerLink=""
+          ><img [src]="WebLogo.siteImage" [title]="WebLogo.logoTitle"
+        /></a>
+      </div>
     </div>
+  </div>
 </div>
