--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,10 @@
     <div class="row">
       <div>
         <a routerLink=""
-          ><img [src]="WebLogo.siteImage" [title]="WebLogo.logoTitle"
+          ><img
+            class="brand-image"
+            [src]="WebLogo.siteImage"
+            [title]="WebLogo.logoTitle"
         /></a>
       </div>
     </div>
