removed sticky heaer

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,4 @@
-<div
-  id="top-bar"
-  class="h1 text-center py-3 row-cols-sm-auto sticky-top container-fluid"
->
+<div id="top-bar" class="h1 text-center py-3 row-cols-sm-auto container-fluid">
   <div class="container">
     <div class="row">
       <div>
